--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -60,7 +60,10 @@
       "USERNAME": "البريد الإلكتروني",
       "PASSWORD": "كلمه السر",
       "CONFIRMPASSWORD": "تأكيد كلمة المرور",
-      "FORGOTPASSWORD": "هل نسيت كلمة المرور.؟",
+      "FORGOTPASSWORD": "هل نسيت كلمة المرور؟",
+      "FORGOTPASSWORDHEADING": "هل نسيت كلمة المرور",
+      "SENDRESETLINK": "أرسل رابط إعادة التعيين",
+      "GOBACKTOLOGIN": "العودة إلى تسجيل الدخول",
       "USERNAMEPLACEHOLDER": "أدخل البريد الإلكتروني",
       "PASSWORDPLACEHOLDER": "كلمه السر",
       "NEWUSER": "مستخدم جديد؟",
