--- a/src/assets/i18n/ch.json
+++ b/src/assets/i18n/ch.json
@@ -60,7 +60,10 @@
       "USERNAME": "电子邮件",
       "PASSWORD": "密碼",
       "CONFIRMPASSWORD": "確認密碼",
-      "FORGOTPASSWORD": "忘記密碼。？",
+      "FORGOTPASSWORD": "忘記密碼？",
+      "FORGOTPASSWORDHEADING": "忘記密碼",
+      "SENDRESETLINK": "發送重置鏈接",
+      "GOBACKTOLOGIN": "返回登錄",
       "USERNAMEPLACEHOLDER": "输入电子邮件",
       "PASSWORDPLACEHOLDER": "密碼",
       "NEWUSER": "新的用戶？",
