--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -61,7 +61,10 @@
       "USERNAME": "Email",
       "PASSWORD": "Password",
       "CONFIRMPASSWORD": "Confirm Password",
-      "FORGOTPASSWORD": "Forgot Password.?",
+      "FORGOTPASSWORD": "Forgot Password?",
+      "FORGOTPASSWORDHEADING": "Forgot Password",
+      "SENDRESETLINK": "Send Reset Link",
+      "GOBACKTOLOGIN": "Go Back To Login",
       "USERNAMEPLACEHOLDER": "Enter Email",
       "PASSWORDPLACEHOLDER": "Password",
       "NEWUSER": "New User?",
